@@ -1,12 +1,12 @@
 #!/usr/bin/perl -I../lib
-=head1 list-vms.pl
+=head1 list-templates.pl
 
-This example script uses the API to list all vApps and their VMs that the 
-user has ability to access.
+This example script uses the API to list all Templates that the user has 
+ability to access.
 
 =head2 Usage
 
-  ./list-vms.pl --username USER --password PASS --orgname ORG --hostname HOST
+  ./list-templates.pl --username USER --password PASS --orgname ORG --hostname HOST
   
 Orgname is optional. It will default to "System" if not given. 
 
@@ -17,7 +17,7 @@ use Getopt::Long;
 use VMware::vCloud;
 use strict;
 
-my $version = ( split ' ', '$Revision: 1.4 $' )[1];
+my $version = ( split ' ', '$Revision: 1.1 $' )[1];
 
 my ( $username, $password, $hostname, $orgname );
 
@@ -29,6 +29,6 @@ die "Check the POD. This script needs command line parameters." unless
 
 my $vcd = new VMware::vCloud ( $hostname, $username, $password, $orgname, { debug => 1 } );
 
-my %vms = $vcd->list_vapps();
+my %vms = $vcd->list_templates();
 
 print "\n", Dumper(\%vms);
